<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tj.epic.hpi_notif.ui.MainActivity"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.6"
            >
            <ImageView
                android:id="@+id/app0Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_empty"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/app0Name"
                android:text="@string/empty_app_name_tv"
                android:layout_weight="0.7"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app0Btn"
            android:text="@string/select_app_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.6"
            >
            <ImageView
                android:id="@+id/app1Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_empty"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/app1Name"
                android:text="@string/empty_app_name_tv"
                android:layout_weight="0.7"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app1Btn"
            android:text="@string/select_app_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.6"
            >
            <ImageView
                android:id="@+id/app2Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_empty"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/app2Name"
                android:text="@string/empty_app_name_tv"
                android:layout_weight="0.7"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app2Btn"
            android:text="@string/select_app_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.6"
            >
            <ImageView
                android:id="@+id/app3Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="3dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_empty"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/app3Name"
                android:text="@string/empty_app_name_tv"
                android:layout_weight="0.7"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app3Btn"
            android:text="@string/select_app_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme_label"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            />
        <Switch
            android:id="@+id/switchDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:theme="@style/SwitchTheme"
            android:paddingLeft="15dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/create_test_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_test_notification"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/cancel_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_notification_txt"
        android:layout_marginTop="15dp"
        />
</LinearLayout>